# Minimal-Agent-Demo

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: agent_exam_answer_cn.md  agent_feature_overview.md  prompt_and_notes.md  recording_script.md  submission_guide_cn.md
docs/baidu_ai_demo/: README.md  baidu_seida_prompt_doc.md  index.html
src/minimal_agent_demo/: __init__.py  __main__.py  app.py  cli.py  config.py  prompts.py  runtime.py  session.py  trace.py
src/minimal_agent_demo/tools/: __init__.py  calculator.py  read_docs.py  search.py  todo.py
tests/: conftest.py  test_cli.py  test_runtime.py  test_session.py  test_tools.py
