[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "minimal-agent-demo"
version = "0.1.0"
description = "A from-scratch minimal agent demo with session memory and tool calling."
requires-python = ">=3.10"
dependencies = [
  "openai>=1.40.0",
  "python-dotenv>=1.0.1",
  "rich>=13.7.1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
minimal-agent-demo = "minimal_agent_demo.app:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--basetemp=.pytest-tmp"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
